# work_journal

./: main.py
data/: db_session.py  jobs_model.py
db/: pypi.sqlite
full_app/: main.py  pyproject.toml
full_app/data/: __all_models.py  jobs_model.py  task_model.py
full_app/db/: pypi.sqlite  test.sqlite
full_app/routes/: jobs.py  task_route.py
full_app/schemas/: job_schema.py  task_schema.py
full_app/services/: job_service.py  task_service.py
full_app/tests/: test_full_app.py
routes/: jobs.py
schemas/: job_schema.py
services/: job_service.py
