[tool.poetry]
name = "full_app"
version = "0.1.0"
description = ""
authors = ["ShadFyt <doanryan10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.25"
databases = {extras = ["sqlite"], version = "^0.5.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
